--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "Framework Braghim Sistemas",
+	"name": "BraghimSistemas",
 	"description": "Framework PHP web simples para criação de sites com alta produtividade.",
 	"license": "MIT",
 	"keywords": ["app", "framework", "braghim-sistemas", "webapp", "web-simple-system", "aplicativo-web-simples"],
