--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
 		"name": "Braghim Sistemas",
 		"email": "braghim.sistemas@gmail.com"
 	}],
-    "support": {"email":"braghim.sistemas@gmail.com"},
+	"support": {"email":"braghim.sistemas@gmail.com"},
 	"require": {
 		"php": ">=5.5",
 		"jayc89/php-mysql-pdo-database-class": "2.0.0",
-		"zendframework/zend-validator" : "2.5.*",
+		"zendframework/zend-validator" : "2.5.*"
+	},
+	"require-dev": {
 		"verot/class.upload.php": "dev-master"
 	},
 	"autoload": {
