--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
 	"support": { "email":"braghim.sistemas@gmail.com" },
 	"require": {
 		"php": ">=5.5",
-		"jayc89/php-mysql-pdo-database-class": "2.0.0",
 		"zendframework/zend-validator" : "2.5.*",
+		"phpmailer/phpmailer": "v5.2.13",
+		"matthiasmullie/minify": "1.3.35",
 		"verot/class.upload.php": "dev-master"
 	},
 	"autoload": {
