--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
 	"require": {
 		"php": ">=5.5",
 		"zendframework/zend-validator" : "2.5.*",
-		"phpmailer/phpmailer": "v5.2.13",
 		"matthiasmullie/minify": "1.3.35",
 		"verot/class.upload.php": "0.33"
+	},
+	"suggest": {
+		"phpmailer/phpmailer": "Not implemented in framework itself, but helps a lot and it's very simple.",
 	},
 	"autoload": {
 		"classmap": ["./BraghimSistemas.php"],
