--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
 	"require": {
 		"php": ">=5.5",
 		"zendframework/zend-validator" : "2.5.*",
+		"zendframework/zend-uri": "2.5.*",
 		"matthiasmullie/minify": "1.3.35",
 		"verot/class.upload.php": "0.33"
 	},
