--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: php
+
+sudo: false
+
 php:
   - 5.3
   - 5.4
@@ -9,4 +12,14 @@ php:
   - hhvm
   - nightly
   
-composer install
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: nightly
+
+before_script:
+    - flags="--prefer-dist"
+    - composer install $flags
+    - bin/composer install $flags
+    - git config --global user.name braghim.sistemas
+    - git config --global user.email braghim.sistemas@gmail.com
