--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ matrix:
     - php: nightly
 
 before_script:
-    - flags="--prefer-dist"
-    - composer install $flags
-    - bin/composer install $flags
+    - composer install
+    - bin/composer install
     - git config --global user.name braghim.sistemas
     - git config --global user.email braghim.sistemas@gmail.com
