--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ matrix:
 
 before_script:
     - composer install
-    - git config --global user.name braghim.sistemas
+    - git config --global user.name braghimsistemas
     - git config --global user.email braghim.sistemas@gmail.com
