--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,17 @@ matrix:
   allow_failures:
     - php: nightly
 
+install:
+  - composer require satooshi/php-coveralls:@dev-master
+
 before_script:
-    - composer install
-    - git config --global user.name braghimsistemas
-    - git config --global user.email braghim.sistemas@gmail.com
-script:
+  - composer install
+  - git config --global user.name braghimsistemas
+  - git config --global user.email braghim.sistemas@gmail.com
   - mkdir -p build/logs
-  - php vendor/bin/phpunit -c phpunit.xml.dist
+
+script:
+  - phpunit --coverage-clover build/logs/clover.xml
 
 after_success:
-  - travis_retry php vendor/bin/coveralls -v
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
