--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,10 @@
 	"autoload": {
 		"classmap": ["./BraghimSistemas.php"],
 		"files": ["./functions.php"]
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"BraghimTest\\": "./test/"
+		}
 	}
 }
