Setting testers and badges

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
   - git config --global user.name braghimsistemas
   - git config --global user.email braghim.sistemas@gmail.com
   - mkdir -p build/logs
-  - touch build/logs/clover.xml
+  - echo "<?xml version="1.0" encoding="UTF-8"?>" >> build/logs/clover.xml
 
 script:
   - phpunit --coverage-clover build/logs/clover.xml
