--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,8 +11,8 @@
 	</testsuites>
 
 	<filter>
-		<whitelist>
-			<directory>.</directory>
+		<whitelist processUncoveredFilesFromWhitelist="true">
+			<directory suffix=".php">.</directory>
 			<exclude>
 				<directory>./build</directory>
 				<directory>./tests</directory>
@@ -27,12 +27,13 @@
 		</exclude>
 	</groups>
 
+
+
 	<php>
-		<ini name="date.timezone" value="America/Sao_Paulo"/>
+		<ini name="date.timezone" value="America/Sao_Paulo" />
 	</php>
 
 	<logging>
-		<log type="coverage-clover" target="build/logs/clover.xml"/>
-		<log type="json" target="build/logs/json.xml" logIncompleteSkipped="false"/>
+		<log type="coverage-clover" target="./build/logs/clover.xml" />
 	</logging>
 </phpunit>
