--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
   - mkdir -p build/logs
 
 script:
-  - phpunit --coverage-clover ./build/logs/clover.xml
+  - phpunit --coverage-clover build/logs/clover.xml -c suitup-php
 
 after_success:
   - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
