--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 
-sudo: false
+sudo: required
 
 php:
   - 5.5
@@ -19,13 +19,14 @@ install:
   - composer require satooshi/php-coveralls:dev-master
 
 before_script:
-  - composer install
+  - wget http://getcomposer.org/composer.phar
+  - php composer.phar install --dev --no-interaction
   - git config --global user.name braghimsistemas
   - git config --global user.email braghim.sistemas@gmail.com
-  - mkdir -p build/logs
 
 script:
-  - phpunit --coverage-clover build/logs/clover.xml -c suitup-php
+  - mkdir -p build/logs
+  - phpunit --coverage-clover build/logs/clover.xml
 
-after_success:
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
+#after_success:
+#  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
