--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,7 +19,16 @@
 		</whitelist>
 	</filter>
 
+	<groups>
+		<exclude>
+			<group>disable</group>
+		</exclude>
+	</groups>
+
 	<php>
 		<ini name="date.timezone" value="America/Sao_Paulo" />
 	</php>
+	<logging>
+		<log type="coverage-clover" target="./build/logs/clover.xml" />
+	</logging>
 </phpunit>
