--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,13 +11,13 @@
 
 	<testsuites>
 		<testsuite name="test">
-			<directory>./suitup-php/test/</directory>
+			<directory>test</directory>
 		</testsuite>
 	</testsuites>
 
 	<filter>
 		<whitelist processUncoveredFilesFromWhitelist="true">
-			<directory suffix=".php">./suitup-php/library</directory>
+			<directory suffix=".php">library</directory>
 		</whitelist>
 	</filter>
 
