--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,17 +11,23 @@
 
 	<testsuites>
 		<testsuite name="test">
-			<directory>test</directory>
+			<directory>./test</directory>
 		</testsuite>
 	</testsuites>
 
 	<filter>
-		<whitelist processUncoveredFilesFromWhitelist="true">
-			<directory suffix=".php">library</directory>
+		<whitelist addUncoveredFilesFromWhitelist="true">
+			<directory suffix=".php">./library</directory>
 		</whitelist>
 	</filter>
 
+	<!--
 	<php>
 		<ini name="date.timezone" value="America/Sao_Paulo" />
 	</php>
+	-->
+
+	<logging>
+		<log type="coverage-clover" target="./build/logs/clover.xml"/>
+	</logging>
 </phpunit>
