--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,10 @@ before_script:
 
 script:
   - mkdir -p build/logs
-  - phpunit --coverage-clover build/logs/clover.xml
+  - phpunit --coverage-clover ./build/logs/clover.xml
 
 after_script:
-  - cat build/logs/clover.xml
+  - cat ./build/logs/clover.xml
   - php vendor/bin/coveralls -v
 
 #after_success:
