--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,16 @@ sudo: required
 
 php:
   - 5.5
-#  - 5.6
-#  - 7.0
-#  - 7.1
-#  - hhvm
+  - 5.6
+  - 7.0
+  - 7.1
+  - hhvm
 
 matrix:
   fast_finish: true
+  allow_failures:
+      - php: 5.5
+      - php: hhvm
 
 install:
   - composer require satooshi/php-coveralls:dev-master
@@ -23,7 +26,7 @@ before_script:
 
 script:
   - mkdir -p build/logs
-  - phpunit --coverage-clover braghim-sistemas/suitup-php/build/logs/clover.xml
+  - phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
   - php vendor/bin/coveralls -v
