--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"verot/class.upload.php": "0.33"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "4.8.*"
+//		"phpunit/phpunit": "4.8.*"
+	  "phpunit/phpunit": "5.5.*"
 	},
 	"suggest": {
 		"phpmailer/phpmailer": "Not implemented in framework itself, but helps a lot and it's very simple."
