--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: php
 
-sudo: required
-
 php:
   - 5.5
   - 5.6
@@ -9,18 +7,20 @@ php:
   - 7.1
   - hhvm
 
+env:
+  global:
+    - DEVELOPMENT=true
+    - SHOW_ERRORS=true
+
 matrix:
   fast_finish: true
   allow_failures:
       - php: 5.5
       - php: hhvm
 
-install:
-  - composer require satooshi/php-coveralls:dev-master
-
 before_script:
   - wget http://getcomposer.org/composer.phar
-  - php composer.phar install --dev --no-interaction
+  - php composer.phar install
   - git config --global user.name braghimsistemas
   - git config --global user.email braghim.sistemas@gmail.com
 
