--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -33,6 +33,6 @@
 	-->
 
 	<logging>
-		<log type="coverage-clover" target="./build/logs/clover.xml"/>
+		<log type="coverage-clover" target="build/logs/clover.xml"/>
 	</logging>
 </phpunit>
