--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-	phpunit -c phpunit.xml
--->
-<phpunit convertErrorsToExceptions="true"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+		 convertErrorsToExceptions="true"
 		 convertNoticesToExceptions="true"
 		 convertWarningsToExceptions="true"
-		 syntaxCheck="true"
 		 bootstrap="./test/setup.php"
 		 colors="true">
 
