--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
   - mkdir -p build/logs
   - ls -lha build/logs
 #  - phpunit --coverage-clover build/logs/clover.xml
-  - php vendor/bin/phpunit -c phpunit.xml.dist
+  - php vendor/bin/phpunit
 
 after_script:
   - ls -lha build/logs
