--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ env:
 matrix:
   fast_finish: true
   allow_failures:
-      - php: 5.5
       - php: hhvm
 
 before_script:
@@ -26,13 +25,7 @@ before_script:
 
 script:
   - mkdir -p build/logs
-  - ls -lha build/logs
-#  - phpunit --coverage-clover build/logs/clover.xml
   - php vendor/bin/phpunit
 
 after_script:
-  - ls -lha build/logs
-  - php vendor/bin/coveralls -v
-
-#after_success:
-#  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
