--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
 		"phpmailer/phpmailer": "Not implemented in framework itself, but helps a lot and it's very simple."
 	},
 	"autoload": {
-		"classmap": ["./src/BraghimSistemas.php"],
-		"files": ["./src/functions.php"]
+		"classmap": ["./src/BraghimSistemas.php"]
 	},
 	"autoload-dev": {
 		"psr-4": {
