Primeiro vamos reorganizar as pastas em seus devidos lugares

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 		"phpmailer/phpmailer": "Not implemented in framework itself, but helps a lot and it's very simple."
 	},
 	"autoload": {
-		"classmap": ["./src/BraghimSistemas.php"]
+		"classmap": ["./src/SuitUpStart.php"]
 	},
 	"autoload-dev": {
 		"psr-4": {
