--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: SuitUp PHP Framework
-description: Para aplicativos WEB legen... dários!
+description: Legendary web applications (productivity and quickly apps starts here)
 google_analytics: 
 show_downloads: true
 theme: jekyll-theme-architect
