--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: SuitUp PHP Framework
-description: Legendary web applications <br/> (productivity and quickly apps starts here)
+description: Legendary web applications \n (productivity and quickly apps starts here)
 google_analytics: 
 show_downloads: true
 theme: jekyll-theme-architect
