--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: SuitUp PHP Framework
 description: Legendary web applications <br/> (productivity and quickly apps starts here)
-google_analytics: 
+google_analytics: UA-64023203-5
 show_downloads: true
 theme: jekyll-theme-architect
 
