--- a/.editorconfig
+++ b/.editorconfig
@@ -3,10 +3,9 @@ root = true
 
 [*]
 charset = utf-8
-end_of_line = LF
+end_of_line = CRLF
 trim_trailing_whitespace = true
 insert_final_newline = true
-
-[*.php]
 indent_style = space
 indent_size = 4
+
