--- a/composer.json
+++ b/composer.json
@@ -3,24 +3,24 @@
 	"description": "Framework PHP web simples para aplicativos incríveis",
 	"license": "MIT",
 	"keywords": ["Suit up", "app", "webapp", "framework", "braghim", "braghim-sistemas", "simple-web-system", "aplicativo-web-simples"],
-	"homepage": "https://framework.braghim.com.br",
+	"homepage": "https://braghimsistemas.github.io/suitup-php/",
 	"authors": [{
 		"name": "Braghim Sistemas",
 		"email": "braghim.sistemas@gmail.com"
 	}],
-	"support": { "email":"braghim.sistemas@gmail.com" },
+	"support": { "email":"marco.a.braghim@gmail.com" },
 	"require": {
 		"php": ">=5.5",
-		"zendframework/zend-validator" : "2.*",
-		"zendframework/zend-uri": "2.*",
-		"matthiasmullie/minify": "1.*",
-		"verot/class.upload.php": "dev-master"
+		"zendframework/zend-validator" : "^2",
+		"zendframework/zend-uri": "^2",
+		"matthiasmullie/minify": "^1"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "4.8.*",
+		"phpunit/phpunit": "^4.8",
 		"satooshi/php-coveralls": "^v2.0.0"
 	},
 	"suggest": {
+    "verot/class.upload.php": "If you need to manage files uploads",
 		"phpmailer/phpmailer": "Not implemented in framework itself, but helps a lot and it's very simple."
 	},
 	"autoload": {
