--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
 		"phpmailer/phpmailer": "Not implemented in framework itself, but helps a lot and it's very simple."
 	},
 	"autoload": {
-		"classmap": ["./src/SuitUpStart.php"]
+		"classmap": ["./src/SuitupStart.php"]
 	}
 }
