--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 	"support": { "email":"marco.a.braghim@gmail.com" },
 	"require": {
 		"php": ">=7.2",
+    "ext-json": "*",
 		"zendframework/zend-validator" : "^2",
 		"zendframework/zend-uri": "^2",
 		"matthiasmullie/minify": "^1"
