--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ notifications:
     - braghim.sistemas@gmail.com
 
 php:
+  - 7.0
+  - 7.1
   - 7.2
+  - 7.3
   - hhvm
 
 services:
@@ -17,8 +20,6 @@ env:
   global:
     - DEVELOPMENT=true
     - SHOW_ERRORS=true
-
-    - TRAVIS=true
 
 matrix:
   fast_finish: true
@@ -39,4 +40,4 @@ script:
   - php vendor/bin/phpunit
 
 after_script:
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/php-coveralls -v; fi;'
