--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,4 @@ script:
   - php vendor/bin/phpunit
 
 after_script:
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/php-coveralls -v; fi;'
