--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,6 +25,7 @@
 
 	<php>
 		<ini name="date.timezone" value="America/Sao_Paulo" />
+    <env name="REQUEST_URI" value="/test/routes/index1/value1/index2/value2" force="true"/>
 	</php>
 
 	<logging>
