--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -32,6 +32,8 @@
 	<php>
 		<ini name="date.timezone" value="America/Sao_Paulo" />
     <server name="DOCUMENT_ROOT" value="./test/" />
+    <env name="DEVELOPMENT" value="false" />
+    <env name="SHOW_ERRORS" value="false" />
 	</php>
 
 	<logging>
