--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -32,9 +32,9 @@
 	<php>
 		<ini name="date.timezone" value="America/Sao_Paulo" />
     <server name="DOCUMENT_ROOT" value="./test/" />
-    <env name="IS_TESTCASE" value="true" />
-    <env name="DEVELOPMENT" value="false" />
-    <env name="SHOW_ERRORS" value="false" />
+    <env name="IS_TESTCASE" value="1" />
+    <env name="DEVELOPMENT" value="0" />
+    <env name="SHOW_ERRORS" value="0" />
 	</php>
 
 	<logging>
