--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,5 +2,5 @@ site_name: Suitup Framework
 theme: readthedocs
 nav:
   - Introduction: index.md
-  - Getting Started: Getting Started/index.md
+  - Getting Started
   - SuitUp 1 Compatibility: SuitUp 1 Compatibility/index.md
