--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Suitup Framework
+site_description: Awesome PHP Framework with high productivity
 site_author: Braghim Sistemas
 
 repo_url: https://github.com/braghimsistemas/suitup-php
@@ -11,9 +12,9 @@ theme:
         - php
 
 nav:
-  - Introduction: index.md
-  - Getting Started: "Getting Started/index.md"
-  - SuitUp 1 Compatibility: "SuitUp 1 Compatibility/index.md"
+    - Introduction: index.md
+    - Getting Started: "Getting Started/index.md"
+    - SuitUp 1 Compatibility: "SuitUp 1 Compatibility/index.md"
 
 markdown_extensions:
     - toc:
