--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,14 @@
 site_name: Suitup Framework
 site_description: Awesome PHP Framework with high productivity
 site_author: Braghim Sistemas
+repo_name: braghimsistemas/suitup-php
 repo_url: https://github.com/braghimsistemas/suitup-php
 theme:
-  name: readthedocs
+  name: material
+  palette:
+    primary: deep purple
+  logo:
+    icon: person_pin_circle
   highlightjs: true
   hljs_languages:
     - yaml
@@ -13,10 +18,15 @@ extra_css:
 pages:
   - Home: index.md
   - User Guide:
-    - Getting Started: getting-started/index.md
+    - Getting Started: user-guide/getting-started/index.md
+  - Contributors: contributors/index.md
   - About:
     - License: about/LICENSE.md
     - SuitUp 1 Compatibility: compatibility/index.md
 plugins:
   - search
+markdown_extensions:
+  - admonition
+  - codehilite
+  - meta
 copyright: Copyright &copy; 2019 Braghim Sistemas
