--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,8 +19,8 @@ nav:
   - Home: index.md
   - User Guide:
     - Getting Started: user-guide/getting-started/index.md
-    - Tutorial for impatients: user-guide/getting-started/impatients/index.md
-    - Step By Step Tutorial: user-guide/getting-started/from-source/index.md
+    - Tutorial for impatients: user-guide/getting-started/impatients.md
+    - Step By Step Tutorial: user-guide/getting-started/from-source.md
   - Contributors: contributors/index.md
   - About:
     - License: about/LICENSE.md
@@ -29,8 +29,10 @@ plugins:
   - search
 markdown_extensions:
   - admonition
-  - codehilite
+  - codehilite:
+      linenums: true
   - meta
   - toc:
       permalink: true
+  - pymdownx.superfences
 copyright: Copyright &copy; 2019 Braghim Sistemas
